Implementation all repositories